# UFO-Detector

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  firefly.md  raspberrypi.md
doc/: Doxyfile
lang/: detector_fi.ts
src/: BackgroundSubtract.cpp  BackgroundSubtract.h  Camera.cpp  Camera.h  Ctracker.cpp  Ctracker.h  Detector.cpp  Detector.h  Detector.pro  Doxyfile  HungarianAlg.cpp  HungarianAlg.h  Kalman.cpp  Kalman.h  OpencvInclude.h  Server.cpp  Server.h  ThreadSafeQueue.cpp  TimedMat.h  TimedMessage.cpp  VIBE.cpp  VIBE.h  actualdetector.cpp  actualdetector.h  camera.cpp  camera.h  camerainfo.cpp  camerainfo.h  cameraresolutiondialog.cpp  cameraresolutiondialog.h  cameraresolutiondialog.ui  cascade.xml  clickablelabel.cpp  clickablelabel.h  config.cpp  config.h  datamanager.cpp  datamanager.h  defines.h  detectionareaeditdialog.cpp  (+48 more)
test/: testsuite.pro
test/mock/: mockCTracker.cpp  mockDetector.cpp  mockRecorder.cpp  mockVideoCodecSupportInfo.cpp  mockcamera.cpp  mockconfig.cpp
test/testActualDetector/: testActualDetector.cpp  testActualDetector.pro
test/testCameraInfo/: testCameraInfo.pro  testcamerainfo.cpp
test/testConfig/: testConfig.pro  testconfig.cpp
test/testRecorder/: mockactualdetector.cpp  mockcamera.cpp  (+3 more)
ufo-detector-engine/: Ctracker.cpp  Ctracker.h  Detector.cpp  Detector.h  HungarianAlg.h  Kalman.cpp  Kalman.h  OpencvInclude.h  VIBE.h  actualdetector.cpp  actualdetector.h  camera.cpp  camera.h  camerainfo.cpp  camerainfo.h  cascade.xml  config.cpp  config.h  datamanager.cpp  datamanager.h  detectorstate.cpp  detectorstate.h  logger.cpp  logger.h  opencv.pri  planechecker.cpp  planechecker.h  recorder.cpp  recorder.h  ufo-detector-engine.pri  videobuffer.cpp  videobuffer.h  videocodecsupportinfo.cpp  videocodecsupportinfo.h
ui-cli/: console.cpp  console.h  main.cpp  ufo-detector-cli.pro
ui-qt/: Detector.pro  cameraresolutiondialog.h  cameraresolutiondialog.ui  clickablelabel.h  detectionareaeditdialog.cpp  detectionareaeditdialog.h  detectionareaeditdialog.ui  detector.qrc  detector.qss  graphicsscene.cpp  graphicsscene.h  imageexplorer.cpp  imageexplorer.h  imageexplorer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonedge.cpp  polygonedge.h  polygonnode.cpp  polygonnode.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  updateapplicationdialog.cpp  updateapplicationdialog.ui  videolist.h  videouploaderdialog.cpp  videouploaderdialog.h  videouploaderdialog.ui  videowidget.h
(+31 files in other folders)
